# shadowsocksr-android

./: .gitmodules  .travis.yml  README.md
src/main/: AndroidManifest.xml
src/main/assets/pages/: about.html
src/main/jni/openssl/include/openssl/: opensslv.h
src/main/jni/shadowsocksr-libev/: .gitignore  .travis.yml  configure
src/main/jni/shadowsocksr-libev/.github/: issue_template.md
src/main/jni/shadowsocksr-libev/src/: CMakeLists.txt  local.c  redir.c
src/main/jni/shadowsocksr-libev/src/obfs/: auth.c  auth_chain.h  crc32.c  obfs.c  obfs.h
src/main/res/values/: arrays.xml  strings.xml
src/main/res/values-zh/: strings.xml
src/main/res/values-zh-rCN/: strings.xml
src/main/res/xml/: pref_all.xml
src/main/scala/com/github/shadowsocks/: ProfileManagerActivity.scala  Shadowsocks.scala  ShadowsocksNatService.scala  ShadowsocksSettings.scala  ShadowsocksVpnService.scala
src/main/scala/com/github/shadowsocks/database/: DBHelper.scala  Profile.scala
src/main/scala/com/github/shadowsocks/job/: SSRSubUpdateJob.scala
src/main/scala/com/github/shadowsocks/utils/: Constants.scala  Parser.scala
